--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Complete Catalog</title>
-<meta content='https://i.imgur.com/kWkF4YV.jpg' property='og:image'/>
+<title>Comgplete Catalogg</title>
+<meta content='https://i.imgur.com/MHUwlFF.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -60,7 +60,7 @@ No
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-ath.akamaized.net/landings/269558/1645442158/images/video.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/282743/1693320169/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
